1.9/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec:
  selector:
    app: pingpong
  ports:
  - port: 3000
    targetPort: 3000
