1.9/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logoutput-ingress
spec:
  rules:
  - host: logoutput.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-node
            port:
              number: 80
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port:
              number: 3000
